[package]
name = "xlsx"
version = "0.1.2"
authors = ["Hilario Perez Corona <hpcorona@gmail.com>"]
description = "writes xlsx files"
license = "MIT"
repository = "https://github.com/hpcorona/xlsx-rs.git"
homepage = "https://github.com/hpcorona/xlsx-rs"
documentation = "https://github.com/hpcorona/xlsx-rs"

[lib]
name = "xlsx"

[dependencies]
xml_writer = { version = "0.1.2", git = "https://github.com/hpcorona/xml_writer.git" }
zip = { version = "0.1.9", git = "https://github.com/hpcorona/zip-rs.git" }
