[package]
name = "xlsx"
version = "0.1.2"
authors = ["Hilario Perez Corona <hpcorona@gmail.com>"]
description = "writes xlsx files"
license = "MIT"
repository = "https://github.com/hpcorona/xlsx-rs.git"
homepage = "https://github.com/hpcorona/xlsx-rs"
documentation = "https://github.com/hpcorona/xlsx-rs"

[lib]
name = "xlsx"

[dependencies]
xml_writer = "0.4"
zip = "0.5.3"
